# ros2learn

./: .gitignore  .gitmodules  Hyperparams.md  Install.md  README.md
environments/docker/mara/mara_description/: CMakeLists.txt  README.md  package.xml
environments/docker/mara/mara_description/launch/: mara_upload.launch  test_mara_model.launch
environments/docker/mara/mara_description/meshes/: H-ROS_Robot_BASE.stl  H-ROS_Robot_LINK1.stl  H-ROS_Robot_LINK2.stl  H-ROS_Robot_mara1.stl  H-ROS_Robot_mara2.stl  H-ROS_Robot_mara3.stl  gripper_support.stl
environments/docker/mara/mara_description/meshes/demo/: AIR_WorkArea.stl  AIR_base.stl
environments/docker/mara/mara_description/urdf/: camera_side.urdf.xacro  camera_top.urdf.xacro  mara.gazebo.xacro  mara.transmission.xacro  mara.urdf.xacro  mara.xacro  mara_demo_camera_side.urdf  mara_demo_camera_top.urdf  mara_nogripper.urdf.xacro  mara_robot.urdf.xacro  mara_robot_camera_side.urdf.xacro  mara_robot_camera_top.urdf.xacro  mara_robot_nogripper.urdf  mara_robot_nogripper.urdf.xacro  robotiq_gripper.urdf.xacro  table.mtl  table.urdf.xacro
environments/docker/mara/mara_moveit_config/: CMakeLists.txt  package.xml
environments/docker/mara/mara_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  mara.srdf  mara2.srdf
environments/docker/mara/mara_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  mara_moveit_controller_manager.launch.xml  mara_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
environments/docker/modular_scara/scara_e1/scara_e1_description/: CMakeLists.txt  README.md  package.xml  visualize.rviz
environments/docker/modular_scara/scara_e1/scara_e1_description/launch/: test_scara_e1_model.launch
environments/docker/modular_scara/scara_e1/scara_e1_description/meshes/: HEBImotor.stl  HEBImotor_case.stl  HEBImotor_fixbar.stl  HEBImotor_support.stl  scara_bar.stl  scara_e1_bar.stl  scara_e1_base_link.stl  scara_e1_base_motor.stl  scara_e1_hros_logo.stl  scara_e1_metacrilato.stl  scara_e1_rangefinder.stl
environments/docker/modular_scara/scara_e1/scara_e1_description/urdf/: scara_e1_6joints.urdf  scara_e1_model_6joints.urdf.xacro
environments/docker/modular_scara/scara_e1/scara_e1_gazebo/: CMakeLists.txt  README.md  package.xml
environments/docker/modular_scara/scara_e1/scara_e1_gazebo/config/: controller.yaml
environments/docker/modular_scara/scara_e1/scara_e1_gazebo/launch/: controller_utils.launch  scara_e1_3joints.launch  scara_e1_4joints.launch  scara_e1_6joints.launch
environments/docker/modular_scara/scara_e1/scara_e1_moveit/: CMakeLists.txt  package.xml
environments/docker/modular_scara/scara_e1/scara_e1_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  scara_controller.yaml  scara_controller_3joints.yaml  (+2 more)
(+403 files in other folders)
