<?xml version="1.0"?>
<package format="2">
  <name>mara_description</name>
  <version>1.0.0</version>
  <description>new artitulated arm model</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>

  <export/>
</package>
