<?xml version="1.0"?>
<package format="2">
  <name>scara_e1_moveit</name>
  <version>1.0.0</version>
  <description>Scara e1 Moveit</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
